<resources>
    <string name="app_name">Henri</string>


    <string name="retry">Retry</string>
    <string name="call_error">An error occurred while loading books</string>
    <string name="not_found">not found</string>
    <string name="not_authorized">not authorized</string>
    <string name="check_internet">check your internet connection</string>
    <string name="security_exception">SecurityException</string>
    <string name="read_summary">
        <u>Read Summary…</u>
    </string>
    <string name="cart">Cart</string>
    <string name="cart_limit">Cart Limit</string>
    <string name="cart_limit_text">Sorry you reached your cart limit</string>
    <string name="final_price">Final Price :</string>
    <string name="books">Books :</string>
    <string name="discount">Discount :</string>
    <string name="buy">Buy</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="clear_cart_warning">Are you sure about cleaning the cart ?</string>
    <string name="user_name">User Name</string>
    <string name="room_name">Room Name</string>
    <string name="room_password">Room Password</string>
    <string name="login">Login</string>

</resources>
