<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
>
    <data>
        <variable
                name="viewModel"
                type="net.riadh.henri.ui.login.LoginViewModel"/>
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@drawable/bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:mutableVisibility="@{viewModel.getLoadingVisibility()}"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/logo" android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                tools:ignore="ContentDescription" tools:srcCompat="@tools:sample/avatars"/>
        <EditText
                app:enableView="@{viewModel.getEnabledInput()}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@={viewModel.userName}"
                android:hint="@string/user_name"
                android:ems="10"
                android:id="@+id/userName" android:layout_marginTop="100dp"
                app:layout_constraintTop_toBottomOf="@+id/logo" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" tools:ignore="Autofill"/>
        <EditText
                app:enableView="@{viewModel.getEnabledInput()}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textAutoComplete"
                android:text="@={viewModel.roomName}"
                android:hint="@string/room_name"
                android:ems="10"
                android:id="@+id/roomName"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/userName" tools:ignore="Autofill"/>
        <EditText
                app:enableView="@{viewModel.getEnabledInput()}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={viewModel.roomPassword}"
                android:hint="@string/room_password"
                android:ems="10"
                android:id="@+id/roomPassword"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/roomName"
                tools:ignore="Autofill"/>
        <Button
                app:enableView="@{viewModel.getEnabledInput()}"
                android:onClick="@{()-> viewModel.login()}"
                android:text="@string/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginBtn" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/roomPassword" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>