<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
>
    <data>
        <variable
                name="viewModel"
                type="net.riadh.henri.ui.cart.CartViewModel"/>
    </data>

    <androidx.core.widget.NestedScrollView
            android:background="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:background="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:id="@+id/constraintLayout">

                <TextView
                        app:mutableText="@{viewModel.finalPrice}"
                        android:fontFamily="sans-serif-black"
                        android:textColor="@color/red_dark"
                        tools:text="Eur 50"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/promo2"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/promo"
                        app:layout_constraintStart_toEndOf="@+id/textView4" android:layout_marginStart="8dp"
                        app:layout_constraintHorizontal_bias="1.0"/>
                <TextView
                        android:text="@string/final_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView4"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView"/>
                <TextView
                        app:mutableText="@{viewModel.discount}"
                        tools:text="Eur 50"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/promo"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintStart_toEndOf="@+id/textView" android:layout_marginStart="8dp"
                        app:layout_constraintHorizontal_bias="1.0"
                        android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/price"/>
                <TextView
                        android:text="@string/books"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"/>
                <TextView
                        android:text="@string/discount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView3"/>
                <TextView
                        app:mutableText="@{viewModel.price}"
                        tools:text="Eur 50"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/price"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/textView3"
                        android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="1.0"/>
                <Button
                        android:text="@string/buy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/buy" android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/promo2"
                        app:layout_constraintVertical_bias="1.0"/>
                <Button
                        android:onClick="@{()-> viewModel.clearCart()}"
                        android:text="@string/clear_cart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/buy2" android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView4"
                        app:layout_constraintVertical_bias="1.0"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:mutableVisibility="@{viewModel.getLoadingVisibility()}"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                    tools:listitem="@layout/item_book"

                    android:id="@+id/book_list"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/constraintLayout"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>